Revision history for Perl extension Perl-MinimumVersion

        - add 'bytes' to 5.6 pragma (Alexandr Ciornii)
        - add support for "version numbers" like "v1.1.1" (Alexandr Ciornii)
        - XML::SAX::Exception should not trigger dependency on 5.5 (Alexandr Ciornii)

1.20 Sat  4 Apr 2009
	- Change 5.005_03 to 5.005.05 (ADAMK)
        - 5.8 and 5.6 pragmas (Alexandr Ciornii)
        - Fixed error in perlver/find (Alexandr Ciornii)
        - CPAN::Exception should not trigger dependency on 5.5 (Alexandr Ciornii)
        - Added undocumented option 'explain' in perlver (Alexandr Ciornii)
        - CHECK blocks (Alexandr Ciornii)
        - First implementation of _three_argument_open and tests (Alexandr Ciornii)

1.19 Sun 14 Sep 2008
	- Updating PPI and several other dependencies to get a more
	  accurate parse on which to run the analysis.
	- Add a dependency on File::Find::Rule::Perl instead of using
	  a duplicate (worse) copy of the code for it.
	- If perlver is run in a CPAN-style distribution don't parse
	  blib or _build directories (but DO parse inc)

1.18 Sat 23 Aug 2008
	- Moving bin/perlver to more correct script/perlver
	- Adding test for localising soft references (BDFOY)
	- Updating to Module::Install 0.77

0.16 Sat 10 May 2008
	- Adding rules for mro.pm and feature.pm (Alexandr Ciornii)
	- Adding rules for 5.10.0 operators and magic variables (Adam Kennedy)
	- Internal fixes for 5.10.0 (read: 5.010) support (Ricardo Signes)
	- Add version_analysis for complete (slow) analysis (Ricardo Signes)
	- Adding a 5.005_03 dependency on qr// (Adam Kennedy)

0.15 Tue 17 Jul 2007
	- No functional changes
	- Updating List::Util dependency to 1.19 to resolve Win32 memory leak
	- Adding rule for "use base 'Exporter';" (some old versions don't export import)
	- Correcting the behaviour of minimum_syntax_version when provided a filter

0.14 Tue  6 Mar 2007
	- Adding support for checking the 5.8 dep "use constant { ... };"
	- Moderning the tests a little